used symbols:
~: file changed
+: file added
-: file removed
->: file renamed
files expected to change every time: kde/ChangeLog and kde/TODO


----------
03/22/05 jpetso (not yet committed)
---------

kde/
 ~makerelease.sh: it works! it's not yet perfect, but already you can generate PNGs and
                  create color mods automatically. I'll finish it later on.
 ~makecolormod.sh: some polish. Now, it definitely works.
 ~generate.py: little more exception handling

actions/
 ~view_detailed.svg: size fix
 ~view_multicolumn.svg: dito
 ~view_icon.svg: dito
 ~view_text.svg: dito
 ~view_tree.svg: dito

apps/
 ~kontact.svg: small fix. I got it in use for a week now, and I really like it this way.
 +fsview.svg: finally! that's another item taken off the todo list.
 ~package_multimedia.svg: replaced with xfce-multimedia.svg, I think that fits better
 ~multimedia.svg: dito
 -globe.svg: doesn't belong into KDE icon set (anymore?)
 +netbeans.svg


----------
03/15/05 jpetso
---------

kde/
 ~generate.py: added option parsing as prerequisite for automatic color mod
               generation. made the code more readable. learned python.

actions/
 ~window_fullscreen.svg
 ~window_nofullscreen.svg

apps/
 +kcmsound.svg
 ~kaudiocreator.svg: update from gnome's sound-juicer


----------
03/14/05 jpetso
---------

kde/
 +makecolormod.sh
 ~makerelease.sh: stop deleting the most important pieces of your working directory
 those two still don't work, don't even try it unless you want to improve them

actions/
 +debugger.svg
 +ktip.svg: I thought I did this one long ago?
 +player_mute.svg: copy of kmixdocked_mute

apps/
 kpoker.svg -> package_games_card.svg

----------
03/13/05 jpetso
---------

actions/
 +history_clear.svg: combined the history icon with the 'no' cross
 ~kontact_summary.svg: small change. might not be the last one, maybe.

apps/
 ~kontact.svg: another try. I think I'm getting close.


----------
03/11/05 jpetso
---------

kde/