@@ -17,7 +17,7 @@ Icons for
 - Gwenview, Kuickshow & KView (one of them could get the gqview icon)
 - KGpg, KFloppy, World Clock, Tea Cooker, AMOR
 - KBear
-- KDE-SDK: Umbrello, KBugBuster, babel fish, Kompare, Qt Utilities
+- KDE-SDK: KDevelop, Umbrello, KBugBuster, babel fish, Kompare, Qt Utilities
 - Game Categories (Arcade, Board Games, Tactics & Strategy)
 - Edutainment (and Subcategories: Languages, Mathematics, Miscellaneous, Science, Teaching Tools)
 
@@ -25,5 +25,4 @@ other TODO items:
 - write an autosync-script
 - Make the Superkaramba guys drop that crappy bomb as system tray icon and use their own one.
   Or better, tell them to drop the system tray icon as a whole, hardly anybody needs that.
-- update all the icons to have them rendered much better in KDE
-- where has my svg icon preview gone in Konqueror 3.4?
+- update all the icons to have them rendered much better from SVG source in KDE
