@@ -1,0 +1,146 @@
+# Lila SVG Icon Theme
+# Copyright (C) 2004 Lila Community
+# Gentoo and the Gentoo G are Copyright Gentoo Technologies, Inc.
+
+[KDE Icon Theme]
+Name=Lila (blue color mod)
+Comment=Gentoo Vector Theme
+DisplayDepth=32
+
+Inherits=hicolor
+
+Example=folder
+LinkOverlay=link
+LockOverlay=lockoverlay
+ZipOverlay=zip
+DesktopDefault=48
+DesktopSizes=16,32,48,64,128
+ToolbarDefault=22
+ToolbarSizes=16,22,32,48
+MainToolbarDefault=22
+MainToolbarSizes=16,22,32,48
+SmallDefault=16
+SmallSizes=16
+PanelDefault=32
+PanelSizes=16,32,48,64,128
+Directories=16x16/actions,22x22/actions,32x32/actions,48x48/actions,64x64/actions,128x128/actions,16x16/apps,22x22/apps,32x32/apps,48x48/apps,64x64/apps,128x128/apps,16x16/devices,22x22/devices,32x32/devices,48x48/devices,64x64/devices,128x128/devices,16x16/filesystems,22x22/filesystems,32x32/filesystems,48x48/filesystems,64x64/filesystems,128x128/filesystems,16x16/mimetypes,22x22/mimetypes,32x32/mimetypes,48x48/mimetypes,64x64/mimetypes,128x128/mimetypes,
+[16x16/actions]
+Size=16
+Context=Actions
+Type=Threshold
+[22x22/actions]
+Size=22
+Context=Actions
+Type=Threshold
+[32x32/actions]
+Size=32
+Context=Actions
+Type=Threshold
+[48x48/actions]
+Size=48
+Context=Actions
+Type=Threshold
+[64x64/actions]
+Size=64
+Context=Actions
+Type=Threshold
+[128x128/actions]
+Size=128
+Context=Actions
+Type=Threshold
+[16x16/apps]
+Size=16
+Context=Applications
+Type=Threshold
+[22x22/apps]
+Size=22
+Context=Applications
+Type=Threshold
+[32x32/apps]
+Size=32
+Context=Applications
+Type=Threshold
+[48x48/apps]
+Size=48
+Context=Applications
+Type=Threshold
+[64x64/apps]
+Size=64
+Context=Applications
+Type=Threshold
+[128x128/apps]
+Size=128
+Context=Applications
+Type=Threshold
+[16x16/devices]
+Size=16
+Context=Devices
+Type=Threshold
+[22x22/devices]
+Size=22
+Context=Devices
+Type=Threshold
+[32x32/devices]
+Size=32
+Context=Devices
+Type=Threshold
+[48x48/devices]
+Size=48
+Context=Devices
+Type=Threshold
+[64x64/devices]
+Size=64
+Context=Devices
+Type=Threshold
+[128x128/devices]
+Size=128
+Context=Devices
+Type=Threshold
+[16x16/filesystems]
+Size=16
+Context=FileSystems
+Type=Threshold
+[22x22/filesystems]
+Size=22
+Context=FileSystems
+Type=Threshold
+[32x32/filesystems]
+Size=32
+Context=FileSystems
+Type=Threshold
+[48x48/filesystems]
+Size=48
+Context=FileSystems
+Type=Threshold
+[64x64/filesystems]
+Size=64
+Context=FileSystems
+Type=Threshold
+[128x128/filesystems]
+Size=128
+Context=Actions
+Type=FileSystems
+[16x16/mimetypes]
+Size=16
+Context=MimeTypes
+Type=Threshold
+[22x22/mimetypes]
+Size=22
+Context=MimeTypes
+Type=Threshold
+[32x32/mimetypes]
+Size=32
+Context=MimeTypes
+Type=Threshold
+[48x48/mimetypes]
+Size=48
+Context=MimeTypes
+Type=Threshold
+[64x64/mimetypes]
+Size=64
+Context=MimeTypes
+Type=Threshold
+[128x128/mimetypes]
+Size=128
+Context=MimeTypes
+Type=Threshold
